<resources>
    <string name="app_name">UNISHOP</string>
    <string name="imagen_principal">Imagen principal</string>
    <string name="encendido">Encendido</string>
    <string name="apagado">Apagado</string>
    <string name="btn_flotante">Botón flotante</string>
    <string name="buscar">Buscar</string>
    <string name="hint_cajon_busqueda">Escribe el nombre del producto…</string>
    <string name="categorias">Categorías</string>
    <string name="agregar_carrito">Añadir al carrito</string>
    <string name="ofertas">Ofertas</string>
    <string name="login">Iniciar sesión</string>
    <string name="registro">Regístrate poder brindarte toda nuestra información y servicios</string>
    <string name="img_producto">Imagen del producto</string>
    <string name="txt_nombre_producto">Nombre del producto :</string>
    <string name="txt_precio_producto">Precio del producto :</string>
    <string name="txt_descuento_producto">Descuento del producto Valor entre (0-1):</string>
    <string name="txt_descripcion">Descripción del producto :</string>
    <string name="txt_unidades">Unidades del producto :</string>
    <string name="titulo_producto">Título producto :</string>
    <string name="titulo_carrito">Productos del carrito :</string>
    <string name="comentarios">Comentarios</string>
    <string name="detalle_producto">Detalle producto</string>
    <string name="compras">Compras</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="producto_carrito_msj">¡Producto agregado al carrito!</string>
    <string name="sin_comentarios">Aún no hay comentarios</string>
    <string name="producto_fav_msj_1">Añadido como favorito</string>
    <string name="producto_fav_msj_2">Eliminado como favorito</string>
    <string name="escribir_comentario">Escribir comentario</string>
    <string name="comentar">Comentar</string>
    <string name="carrito_vacio">Carrito Vacío</string>
    <string name="resultado_busqueda">Resultado de Búsqueda</string>
    <string name="sin_ofertas">Aún no hay ofertas</string>
    <string name="sin_favoritos">Aún no hay favoritos</string>
    <string name="sin_productos">Aún no hay productos</string>
    <string name="sin_compras">Aún no hay compras</string>
    <string name="menu">Menú</string>
    <string name="crear_producto">Crear nuevo producto</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="password">Contraseña :</string>
    <string name="email">Correo electrónico :</string>
    <string name="cedula">Cédula:</string>
    <string name="name">Nombre:</string>
    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
    <string name="logout">Cerrar sesión</string>
    <string name="compra_realizada">¡Compra realizada correctamente!</string>
    <string name="loading">Cargando...</string>
</resources>