<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_cerrar_sesion"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/logout"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Más opciones">
        <menu>
            <item
                android:id="@+id/menu_crear_producto"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/crear_producto"
                />
            <item
                android:id="@+id/menu_mis_productos"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="Mis productos" />
            <item
                android:id="@+id/menu_cambiar_idioma"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/cambiar_idioma" />
        </menu>
    </item>

</menu>