<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.CrearProductoActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        android:paddingTop="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registro Producto"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_nombre_layout"
            style="@style/ti_layout">

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_nombre_producto"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_precio_layout"
            style="@style/ti_layout">

            <EditText
                android:id="@+id/txt_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_precio_producto"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/seleccion_descuento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/fondo_forms"
            android:layout_marginBottom="15dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_descuento_layout"
            style="@style/ti_layout"
            >

            <EditText
                android:id="@+id/txt_descuento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_descuento_producto"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_descripcion_layout"
            style="@style/ti_layout">

            <EditText
                android:id="@+id/txt_descripcion"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:lines="16"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_descripcion"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_unidades_layout"
            style="@style/ti_layout">

            <EditText
                android:id="@+id/txt_unidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_unidades"
                android:textColorHint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/categorias_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="false">

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btn_crear_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_producto"
            android:backgroundTint="@color/yellow"/>

    </LinearLayout>

</ScrollView>
