<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".actividades.LoginActivity"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_favorito"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_toStartOf="@+id/txt_titulo"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/font_awesome_6_free_solid_900"
            android:padding="0dp"
            android:text="\uf54f"
            android:textColor="@color/yellow"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            tools:src="@drawable/descarga" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/txt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/yellow"/>

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrase"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/yellow"/>


        </LinearLayout>
        <Button
            android:id="@+id/btn_recuperar_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout="@+id/btn_login"
            android:background="@color/transparent"
            android:text="Recuperar contraseña"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>